--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://d2slcw3kip6qmk.cloudfront.net/marketing/blog/2018Q4/timeline-powerpoint/how-to-create-a-timeline-in-powerpoint-header@2x.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TimeLine</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
